# Nutritionist_WebApp

./: .gitignore  APPLY_INSTRUCTIONS_FA.md  BUILD_TRIGGER_UPDATE_CODEX_LOCAL_FINAL.txt  BUILD_VERIFICATION.txt  CHANGELOG.md  CHANGELOG_V47_FA.md  CHANGELOG_V53_FA.md  CUSTOMER_TEST_CHECKLIST_FA.md  DELETE_THESE_IF_PRESENT.txt  FILE_MANIFEST_SHA256.txt  MIGRATION_NOTES_FA.md  READ-ME-FIRST-FA.md  README.md  UPDATE_FILES_V53_FA.txt  index.html  package-lock.json  package.json  tailwind.config.ts
.codex-release/: app-00.txt  app-01.txt  app-02.txt  app-03.txt  polish-00.txt  rust-00.txt  rust-01.txt
.github/workflows/: 00-run-final-dietoy-030.yml  agent-client-ready-fix.yml  agent-client-ready-release.yml  agent-single-installer.yml  build-installer.yml  build-repo-installer.yml  windows-installer.yml
docs/: PHASE1_STABILITY_AND_RECORDS_PLAN.md
installer/: Build-USB-Package.ps1  Build-USB-Package.vbs  Customer-Install-Silent.vbs  Customer-Install.vbs  Install-Windows-Build-Prerequisites.ps1  Install-on-Desktop.vbs  README-USB.txt  START-HERE-DIETORY.hta  Silent-Install-on-Desktop.vbs  UNINSTALL-CURRENT-APP.vbs  UPDATE-CURRENT-APP.vbs
src/: App.tsx  buildMarker.ts  clinicalUxGuard.ts  deliveryPolish.ts  lib.ts  main.tsx  pdfPreviewFix.ts  persianDate.ts  profile-polish.css  profileTabs.ts  styles.css  tauriCommandCompat.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: desktop-shortcut.nsh
src-tauri/src/: lib.rs  main.rs
src/components/: BodyAnalysisViewer.tsx  ClientTrendChart.tsx
