[package]
name = "persian_dietitian_desktop"
version = "5.0.0"
description = "Offline-first Persian dietitian desktop app"
authors = ["Rezo"]
edition = "2021"

[lib]
name = "persian_dietitian_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
